--- a/deno.json
+++ b/deno.json
@@ -10,6 +10,7 @@
     "www": "deno task lume",
     "lume": "cd www && echo \"import 'lume/cli.ts'\" | deno run --unstable -A -",
     "css": "deno run -qA tool/css.ts src/missing.css && deno run -qA tool/css.ts src/missing-prism.css",
+	"css-optin": "deno run -qA tool/css-optin.ts src/missing.css",
     "js": "rm -rf dist/js && cp -r src/js dist/js"
   },
   "nodeModulesDir": false
